= ActiveMerchant CHANGELOG

== HEAD

== Version 1.66.0 (May 4, 2017)
* Support Rails 5.1 [jhawthorn] #2407
* ProPay: Add Canada as supported country [davidsantoso]
* ProPay: Add gateway support [davidsantoso] #2405
* SafeCharge: Support credit transactions [shasum] #2404
* WePay: Add scrub method [shasum] #2406
* iVeri: Add gateway support [curiousepic] #2400
* iVeri: Support 3DSecure data fields [davidsantoso] #2412
* Opp: Fix transaction success criteria and clean up options [shasum] #2414
* Elavon: Support custom fields [curiousepic] #2416
* WePay: Support risk headers [shasum] #2419
* WePay: Add Canada as supported country [shasum] #2419
* Fat Zebra: Fix xid 3D Secure field [curiousepic]
* SafeCharge: Mark support for European countries [curiousepic]
* Checkout V2: Pass customer ip option [curiousepic]
* Realex: Map AVS and CVV response codes [davidsantoso] #2424
* Opp: Send disable3DSecure custom parameter if present [davidsantoso] #2432
* SafeCharge: Map standard Active Merchant order_id field [davidsantoso] #2434

== Version 1.65.0 (April 26, 2017)
* Adyen: Add Adyen v18 gateway [adyenpayments] #2272
* Authorize.Net: Force refund of unsettled payments via void [bizla] #2399
* Barclays ePDQ: removed because it has been replaced by a new API [bdewater] #2331
* Beanstream: Map ISO province codes for US and CA [shasum] #2396
* Braintree Blue: Change :full_refund option to :force_full_refund_if_unsettled [bizla] #2403
* Braintree Blue: Force refund of unsettled payments via void [bizla] #2398
* Checkout V2: Fix sandbox URL [nicolas-maalouf-cko] #2391
* Checkout V2: Fix success_from not properly checking two possible success codes [davidsantoso]
* Cybersource: Rescue XML parse exception [shasum] #2380
* GlobalCollect: Make message and error reporting more robust [curiousepic] #2370
* GlobalCollect: Set REJECTED refunds as unsuccessful transactions [davidsantoso] #2365
* GlobalCollect: Truncate firstName field to 15 characters [davidsantoso]