@@ -9,6 +9,14 @@ class RemoteNmiTest < Test::Unit::TestCase
       :routing_number => '123123123',
       :account_number => '123123123'
     )
+    @apple_pay_card = network_tokenization_credit_card('4111111111111111',
+      :payment_cryptogram => "EHuWW9PiBkWvqE5juRwDzAUFBAk=",
+      :month              => "01",
+      :year               => "2024",
+      :source             => :apple_pay,
+      :eci                => "5",
+      :transaction_id     => "123456789"
+    )
     @options = {
       :order_id => generate_unique_id,
       :billing_address => address,
@@ -60,6 +68,22 @@ class RemoteNmiTest < Test::Unit::TestCase
     assert_failure response
     assert response.test?
     assert_equal 'FAILED', response.message
+  end
+
+  def test_successful_purchase_with_apple_pay_card
+    assert @gateway.supports_network_tokenization?
+    assert response = @gateway.purchase(@amount, @apple_pay_card, @options)
+    assert_success response
+    assert response.test?
+    assert_equal 'Succeeded', response.message
+    assert response.authorization
+  end
+
+  def test_failed_purchase_with_apple_pay_card
+    assert response = @gateway.purchase(99, @apple_pay_card, @options)
+    assert_failure response
+    assert response.test?
+    assert_equal 'DECLINE', response.message
   end
 
   def test_successful_authorization
@@ -239,6 +263,19 @@ class RemoteNmiTest < Test::Unit::TestCase
 
     assert_scrubbed(@check.account_number, clean_transcript)
     assert_scrubbed(@check.routing_number, clean_transcript)
+
+    # "password=password is filtered, but can't be tested b/c of key match"
+    # assert_scrubbed(@gateway.options[:password], clean_transcript)
+  end
+
+  def test_network_tokenization_transcript_scrubbing
+    transcript = capture_transcript(@gateway) do
+      @gateway.purchase(@amount, @apple_pay_card, @options)
+    end
+    clean_transcript = @gateway.scrub(transcript)
+
+    assert_scrubbed(@apple_pay_card.number, clean_transcript)
+    assert_scrubbed(@apple_pay_card.payment_cryptogram, clean_transcript)
 
     # "password=password is filtered, but can't be tested b/c of key match"
     # assert_scrubbed(@gateway.options[:password], clean_transcript)
